--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <module>echo</module>
     <module>sonar-orchestrator</module>
     <module>sonar-orchestrator-config</module>
+    <module>sonar-orchestrator-http</module>
     <module>sonar-orchestrator-junit4</module>
     <module>sonar-orchestrator-junit5</module>
   </modules>
@@ -42,6 +43,7 @@
   <properties>
     <license.name>GNU LGPL v3</license.name>
     <slf4j.version>2.0.17</slf4j.version>
+    <okhttp.version>5.1.0</okhttp.version>
     <sonar.exclusions>
       **/com/sonar/orchestrator/echo/**/*.java,target/generated-sources/**/*
     </sonar.exclusions>
@@ -80,6 +82,21 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-text</artifactId>
         <version>1.14.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>okhttp-jvm</artifactId>
+        <version>${okhttp.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>mockwebserver3-junit4</artifactId>
+        <version>${okhttp.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>mockwebserver3-junit5</artifactId>
+        <version>${okhttp.version}</version>
       </dependency>
       <dependency>
         <groupId>org.junit</groupId>
