--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <license.name>GNU LGPL v3</license.name>
     <slf4j.version>2.0.17</slf4j.version>
     <okhttp.version>5.1.0</okhttp.version>
+    <jacoco.version>0.8.13</jacoco.version>
     <sonar.exclusions>
       **/com/sonar/orchestrator/echo/**/*.java,target/generated-sources/**/*
     </sonar.exclusions>
