--- a/sonar-orchestrator-junit5/pom.xml
+++ b/sonar-orchestrator-junit5/pom.xml
@@ -25,6 +25,11 @@
       <artifactId>sonar-orchestrator</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.sonarsource.orchestrator</groupId>
+      <artifactId>sonar-orchestrator-utils</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <!-- unit tests -->
     <dependency>
