--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,12 @@
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
-        <version>3.27.6</version>
+        <version>3.27.7</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.3.15</version>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
