NO-JIRA Fix the cron job for the CI

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,7 +1,8 @@
 name: CI Scheduled (master nightly)
 on:
   schedule:
-    - cron: '0 2 * * *'  # Nightly builds
+    - cron: '0 2 * * *'
+  workflow_dispatch:
 
 jobs:
   build:
